# zagorakys

./: LICENSE  README.md  THIRD-PARTY-LICENSES.md  bump.sh  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build-windows.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: converter.rs  lib.rs  main.rs
src-tauri/tests/fixtures/: test_comic.cbz
