[package]
name = "zagorakys"
version = "0.2.0"
description = "CBR/CBZ to MOBI converter for Kindle"
authors = ["skocho"]
edition = "2021"

[lib]
name = "zagorakys_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
kindling = { git = "https://github.com/ciscoriordan/kindling", package = "kindling-mobi" }
libc = "0.2"

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
