[package]
name = "zagorakys"
version = "1.4.1"
description = "Comic archive converter and optimizer for Kindle and Kobo"
authors = ["skocho"]
edition = "2021"

[lib]
name = "zagorakys_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
kindling = { git = "https://github.com/ciscoriordan/kindling", package = "kindling-mobi", rev = "b3d9ae4" }
image = "0.25"
rayon = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
libc = "0.2"
walkdir = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
